package com.onlinefoodstore.dao.impl;

public interface ICustomerDAO {
}
