package com.onlinefoodstore.payment;
//ödeme yöntemi icin gereken interface
public interface IPaymentMethod {
    void pay(double amount);
}
